# remember-me

./: README.md
.devcontainer/: devcontainer.json
api/: .gitignore  app.py  requirement.txt
api/assets/Monique/: data.json
api/src/: data_struct.py  person_generation.py  schema.py  test.ipynb  tools.py
app-front/: package-lock.json
app-front/src/: AlbumPage copy.vue  AlbumPage.vue  App.vue  FichePage copy.vue  FichePage.vue  HomePage.vue  SouvenirPage copy.vue  SouvenirPage.vue
app-front/src/components/: Agenda.vue  DetailFiche.vue  HeureDate.vue  SouvenirDuJour.vue
app-front/src/data/: people.json
back/: pyproject.toml
back/notebooks/: day_memory.json  day_memory.json.old  db.json  event_memories.json  prompts.ipynb
back/src/remember/batch/: conf.py  db.py  generate_day_memory.py  generate_event_memories.py  schema.py
vuejs-tailwind/: package.json  tailwind.config.js
vuejs-tailwind/src/: App.vue  style.css
vuejs-tailwind/src/components/: MemoryDashboard.vue
