[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "elevenlabs>=1.55.0",
    "fastapi[standard]>=0.115.12",
    "langchain>=0.3.21",
    "langchain-mistralai>=0.2.10",
    "langchain-openai>=0.3.11",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
